fixed spelling error :-)
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@3860 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/other/SimpleServer/README
+++ b/other/SimpleServer/README
@@ -5,7 +5,7 @@ run side by side with the iFolder client under the same local user
 account.  You must dedicate a separate machine or run Simple
 Server in a separate user session.
 
-The SimpleServer assembly is an add on thead service to Simias
+The SimpleServer assembly is an add on thread service to Simias
 which enables it to become a simple iFolder server.  The
 member list (users) is created from a simple xml file -
 SimpleServer.xml which is located in the (simias-target-directory)/etc.
