Disable Login/Logout functionality in Windows UI ... it will be re-enabled after public beta is released.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3963 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/FormsTrayApp/Preferences.resx
+++ b/ifolder/src/FormsTrayApp/Preferences.resx
@@ -3553,6 +3553,9 @@
   <data name="statusLoggedOut">
     <value>Logged out</value>
   </data>
+  <data name="statusEnabled">
+    <value>Enabled</value>
+  </data>
   <data name="statusDisabled">
     <value>Disabled</value>
   </data>
